package com.example.designpattern.facade

/**
 * 外观模式：高层接口
 */
interface IComputer {
    fun start()//启动电脑
    fun stop()//关闭电脑
}